src/test/resources/parser/invalid/function/invalidReturn.sbsc
test = (a: int): num -> {
    return "hello";
};